--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -7,11 +7,20 @@ html {
 body {
 	font-family: "lato", sans-serif;
   	color: #FFF;
-	height: 100%
+	height: 100vh;
+  	overflow: hidden;
+}
+
+main {
+	overflow: scroll;
+  	height: 100vh;
+  	scroll-snap-points-y: repeat(100vh);
+   scroll-snap-type: y mandatory;
 }
 
 section {
 	padding: 30px;
+	scroll-snap-align: center;
 }
 
 .section-heading {
@@ -46,6 +55,7 @@ header {
    z-index: 10000;
 	display: grid;
 	align-items: center;
+	box-shadow: 0px 0px 10px #fff;
 }
 
 .main-nav {
@@ -244,6 +254,7 @@ header {
 	grid-column-gap: 0px;
 	grid-row-gap: 0px; 
 	place-items: center;
+	padding-top: 50px;
 }
 
 .profile--pic-area {
@@ -368,6 +379,7 @@ header {
 	grid-template-rows: 3fr 100px 300px 2fr; 
 	grid-column-gap: 0px;
 	grid-row-gap: 0px; 
+	height: 100vh;
 }
 
 #about p {
@@ -392,32 +404,47 @@ header {
 #contact {
 	height: 100vh;
 	display: grid; 
-	grid-template-columns: 1fr repeat(2, 400px) 1fr; 
-	grid-template-rows: 3fr repeat(4, 100px) 2fr; 
+	grid-template-columns: repeat(2, 1fr); 
+	grid-template-rows: 2fr 1fr repeat(4, 75px) repeat(2, 1fr); 
 	grid-column-gap: 0px;
-	grid-row-gap: 0px;
-	position: relative;
-	top: 100px;
+	grid-row-gap: 0px; 
+	padding: 0px;
 }
 
 #contact-heading {
-	grid-area: 2 / 2 / 3 / 4;
+	grid-area: 2 / 1 / 3 / 3;
 	place-self: center;
 }
 
 #my-phone {
-	grid-area: 3 / 2 / 4 / 3;
-	text-align: center;
+	grid-area: 3 / 1 / 5 / 2;
+	text-align: right;
+	margin-right: 50px;
 }
 
 #my-email {
-	grid-area: 4 / 2 / 5 / 3;
-	text-align: center;
+	grid-area: 5 / 1 / 7 / 2;
+	text-align: right;
+	margin-right: 50px;
+}
+
+#contact-vid, #overlay {
+	grid-area: 3 / 2 / 7 / 3;
 }
 
 #contact-vid {
-	grid-area: 3 / 3 / 6 / 4;
+	width: 300px;
+	height: 300px;
+	border-radius: 50%;
+   object-fit: cover;
 	z-index: -1;
+}
+
+#overlay {
+	width: 300px;
+	height: 300px;
+  	background-color: rgba(0, 0, 0, 0.3);
+	z-index: 2;
 }
 
 #contact-form {
@@ -428,10 +455,8 @@ header {
 	background: #fff;
 	Z-index: 10001;
 	position: fixed;
-	top: 50%;
-	left: 50%;
-	margin-top: -50vh;
-	margin-left: -50vw;
+	top: 0;
+	left: 0;
 	grid-template-columns: 1fr 3fr 1fr; 
 	grid-template-rows: 1fr repeat(8, 2fr); 
 	grid-column-gap: 0px;
@@ -460,7 +485,7 @@ header {
 	font-weight: 400;
 	font-size: 32px;
 	text-transform: uppercase;
-	grid-area: 2 / 2 / 3 / 3;
+	grid-area: 2 / 1 / 3 / 4;
 	text-shadow: 1px 1px 1px #fff;
 }
 
@@ -497,10 +522,10 @@ header {
 
 .icon--less-weight {
 	font-variation-settings:
-  'FILL' 0,
-  'wght' 300,
-  'GRAD' 0,
-  'opsz' 48
+		'FILL' 0,
+		'wght' 300,
+		'GRAD' 0,
+		'opsz' 48
 }
 
 form button, input, textarea, button {
@@ -526,29 +551,29 @@ label {
 }
 
 input, textarea {
-box-shadow: inset 2px 2px 5px #babecc, inset -5px -5px 10px #fff;
-width: 80vw;
-box-sizing: border-box;
-transition: all 0.2s ease-in-out;
-appearance: none;
--webkit-appearance: none;
+	box-shadow: inset 2px 2px 5px #babecc, inset -5px -5px 10px #fff;
+	width: 80vw;
+	box-sizing: border-box;
+	transition: all 0.2s ease-in-out;
+	appearance: none;
+	-webkit-appearance: none;
 }
 
 input:focus, textarea:focus {
-box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px #fff;
+	box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px #fff;
 }
 
 form button, button {
-color: #61677c;
-box-shadow: -5px -5px 20px #fff, 5px 5px 20px #babecc;
-transition: all 0.2s ease-in-out;
-cursor: pointer;
+	color: #61677c;
+	box-shadow: -5px -5px 20px #fff, 5px 5px 20px #babecc;
+	transition: all 0.2s ease-in-out;
+	cursor: pointer;
 font-weight: 600;
 }
 
 form button:hover, button:hover {
 box-shadow: -2px -2px 5px #fff, 2px 2px 5px #babecc;
-}
+	}
 
 form button:active, button:active {
 box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px #fff;
@@ -571,13 +596,6 @@ font-size: 19.2px;
 	color: #61677c;
 }
 
-#contact-vid {
-	width: 291px;
-	height: 291px;
-	border-radius: 50%;
-   object-fit: cover;
-}
-
 /* FOOTER */
 
 footer {
@@ -585,12 +603,12 @@ footer {
 	text-align: center;
 	height: 100px;
 	display: grid;
-	place-items: center;
 }
 
 footer p {
-	position: relative;
 	color: black;
-	top: 20px;
+	place-self: center;
+	position: relative;
+	top: 10px;
 }
 
