--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -438,13 +438,7 @@ header {
 	border-radius: 50%;
    object-fit: cover;
 	z-index: -1;
-}
-
-#overlay {
-	width: 300px;
-	height: 300px;
-  	background-color: rgba(0, 0, 0, 0.3);
-	z-index: 2;
+	pointer-events: none;
 }
 
 #contact-form {
